# MeetScribe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Claude.md  Dockerfile  README.md  config.example.yaml  config.poc.yaml  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
.claude/commands/: gh-bug-create.md  gh-feature-create.md  gh-template.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  issues.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/issues/: 001_issue.md  002_issue.md  003_issue.md  004_issue.md  005_issue.md  006_issue.md  007_issue.md  008_issue.md  009_issue.md  010_issue.md  011_issue.md  012_issue.md  013_issue.md  014_issue.md  015_issue.md  016_issue.md  017_issue.md  018_issue.md  019_issue.md  020_issue.md  021_issue.md  022_issue.md  023_issue.md  024_issue.md  025_issue.md  026_issue.md  027_issue.md  028_issue.md  029_issue.md  030_issue.md  031_issue.md  032_issue.md  033_issue.md  034_issue.md  035_issue.md  036_issue.md  037_issue.md  038_issue.md  039_issue.md  040_issue.md  (+1 more)
.github/issues/processed/: .gitkeep
.github/workflows/: ci.yml  create_issues.py  issue_creator.yml
docs/: DEVELOPMENT.md  DOCKER.md  POC_COMPLETE.md  POC_GUIDE.md  PROJECT_SUMMARY.md  api-reference.md  architecture.md  contributing.md  design_principles.md  discord_webhook_renderer_design.md  multiple_outputs_design.md  overview.md  pipeline.md  plugins.md  tutorial.md  user-guide-ja.md  user-guide.md
meetscribe/: __init__.py  cli.py  init_templates.py
meetscribe/converters/: __init__.py  deepgram_converter.py  factory.py  faster_whisper_converter.py  gemini_converter.py  passthrough_converter.py  whisper_converter.py
meetscribe/core/: __init__.py  config.py  logging.py  meeting_id.py  models.py  plugin.py  providers.py  runner.py
meetscribe/inputs/: __init__.py  discord_provider.py  factory.py  file_provider.py  google_meet_provider.py  obs_provider.py  webrtc_provider.py  zip_provider.py
meetscribe/llm/: __init__.py  chatgpt_provider.py  claude_provider.py  factory.py  gemini_provider.py  notebooklm_provider.py
meetscribe/outputs/: __init__.py  discord_webhook_renderer.py  factory.py  google_docs_renderer.py  google_sheets_renderer.py  json_renderer.py  markdown_renderer.py  pdf_renderer.py  url_renderer.py
meetscribe/templates/: __init__.py
meetscribe/utils/: __init__.py  audio.py  files.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_config_multiple_outputs.py  test_converters.py  test_documentation.py  test_init_templates.py  test_inputs.py  test_integration.py  test_llm.py  test_llm_providers.py  test_logging.py  test_meeting_id.py  test_models.py  test_outputs.py  test_plugin_system.py  test_poc_pipeline.py  test_providers_extended.py  test_runner.py  test_utils_audio.py  test_utils_files.py  test_zip_provider.py
tests/fixtures/: sample_config.yaml  sample_minutes.json  sample_minutes_japanese.json  sample_transcript.json
